images for likes

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,12 @@
 body {
-    background-color: pink;
+    background-color: blue;
     font-family: sans-serif;
     }
 
+#puppies
+{
+    width: 300px;
+    height: 200 px;
+    border: 1px;
+}
 
