--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <html>
     <head><title>{{title}}</title></head>
+    <link rel="stylesheet" href="/static/style.css">
     <body>
          <h1>{{title}}</h1>
 
@@ -19,6 +20,15 @@
              % end
          </ul>
          % end
+         % if likes:
+            % for like in likes:
+                % if like == "puppies":
+                <div>
+                    <img id="puppies" src="/static/puppies.jpg">
+                </div>
+                % end
+            % end
+        % end
 
 
     </body>
